# actix-webapp

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  nginx.conf
.circleci/: config.yml
sql/: add_category.sql  add_report.sql  add_user.sql  get_all_categories.sql  get_all_users.sql  get_report.sql  schema.sql  search_user.sql
sql/initdb/: 1_createdb.sh  1_createdb.sql
src/: config.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  param.rs  routes.rs  state.rs  templates.rs
static/: form.html
