[package]
name = "actix-webapp"
version = "0.1.0"
authors = ["tanacchi <q111026d@mail.kyutech.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "*"
actix-cors = "*"
actix-web = "3"
chrono = "*"
config = "0.10.1"
deadpool-postgres = "0.5.0"
derive_more = "0.99.2"
dotenv = "0.15.0"
env_logger = "*"
log = "*"
maud = "*"
serde = "1.0"
serde_json = "1.0"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = "0.5.1"
